[package]
name = "basic-human-duration"
description = "Simple human formatting of chrono::Duration"
version = "0.2.0"
license = "Apache-2.0/MIT"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>", "Smail Barkouch <smailbarkouch1@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/SmailBarkouch/chrono-human-duration"

[dependencies]
time = "0.3.20"
